Cleaned the code in TestsApplier class